# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/data_share/datashare.gni")

group("build_module") {
  deps = [ ":distributeddata_inner" ]
}

config("distributeddatafwk_config") {
  visibility = [ ":*" ]

  cflags = [ "-Wno-multichar" ]

  cflags_cc = [ "-fvisibility=hidden" ]

  include_dirs = [
    "include",
    "../../../frameworks/innerkitsimpl/distributeddatafwk/include",
    "../../../frameworks/innerkitsimpl/distributeddatafwk/src",
    "../../../frameworks/common",
    "../../../frameworks/innerkitsimpl/kvdb/include",
    "../../../frameworks/innerkitsimpl/kvdb/src",
    "//utils/system/safwk/native/include",
    "//commonlibrary/c_utils/base/include",
    "${datashare_innerapi_path}/common/include",
    "${datashare_innerapi_path}/provider/include",
    "//foundation/distributeddatamgr/distributedfile/interfaces/kits/js/src/mod_securitylabel",
    "//foundation/distributeddatamgr/datamgr_service/services/distributeddataservice/adapter/include/dfx",
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
  ]
}

config("distributeddatafwk_public_config") {
  visibility = [ "//foundation/distributeddatamgr/kv_store:*" ]

  include_dirs = [
    "include",
    "../../../frameworks/innerkitsimpl/distributeddatafwk/include",
    "//commonlibrary/c_utils/base/include",
  ]
}

old_source_config = [
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/blob.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/change_notification.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/data_query.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/distributed_kv_data_manager.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/ikvstore_client_death_observer.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/ikvstore_data_service.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/ikvstore_observer.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/ikvstore_sync_callback.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kv_utils.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kvstore_client_death_observer.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kvstore_datashare_bridge.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kvstore_observer_client.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kvstore_service_death_notifier.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/kvstore_sync_callback_client.cpp",
  "../../../frameworks/innerkitsimpl/distributeddatafwk/src/sync_observer.cpp",
  "include/types.h",
]

kvdb_source_config = [
  "../../../frameworks/innerkitsimpl/kvdb/src/auto_sync_timer.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/backup_manager.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/convertor.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/dev_manager.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/device_convertor.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/kv_types_util.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/kvdb_service_client.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/observer_bridge.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/security_manager.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/single_store_impl.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/store_factory.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/store_manager.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/store_result_set.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/store_util.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/system_api.cpp",
  "../../../frameworks/innerkitsimpl/kvdb/src/task_executor.cpp",
]

deps_config = [ "//foundation/distributeddatamgr/kv_store/frameworks/libs/distributeddb:distributeddb" ]

external_deps_config = [
  "c_utils:utils",
  "device_manager:devicemanagersdk",
  "hisysevent_native:libhisysevent",
  "hitrace_native:hitrace_meter",
  "hitrace_native:libhitracechain",
  "hiviewdfx_hilog_native:libhilog",
  "huks:libhukssdk",
  "ipc:ipc_single",
  "samgr:samgr_proxy",
]

ohos_shared_library("distributeddata_inner") {
  sources = old_source_config + kvdb_source_config

  configs = [ ":distributeddatafwk_config" ]
  public_configs = [ ":distributeddatafwk_public_config" ]

  deps = deps_config
  external_deps = external_deps_config
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "distributeddatamgr"
  part_name = "kv_store"
}
