# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store_deps.gni")

config("hitrace_config") {
  include_dirs = [
    "include",
    "include/hitrace_meter",
  ]
}

ohos_source_set("hitrace_meter") {
  sources = [ "mock_hitrace_meter.cpp" ]
  all_dependent_configs = [ ":hitrace_config" ]
  public_configs = [ ":hitrace_config" ]
  external_deps = [
    "c_utils:utils",
    "bounds_checking_function:libsec_shared",
  ]
  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}

ohos_source_set("libhitracechain") {
  configs = [ ":hitrace_config" ]
  sources = [ "mock_hitrace_chain.cpp" ]
  all_dependent_configs = [ ":hitrace_config" ]
  public_configs = [ ":hitrace_config" ]
  external_deps = [
    "c_utils:utils",
    "bounds_checking_function:libsec_shared",
  ]
  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}