# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store_deps.gni")

config("napi_config") {
  include_dirs = [
    "include",
    "include/napi",
  ]
}

ohos_source_set("ace_napi") {
  configs = [ ":napi_config" ]
  all_dependent_configs = [ ":napi_config" ]
  public_configs = [ ":napi_config" ]
  sources = [ "mock_napi.cpp" ]
  deps = []
  deps += deps_eventhandler
  deps += deps_bundle_framework
  external_deps = [
    "c_utils:utils",
    "json:nlohmann_json_static",
  ]
  external_deps += external_deps_eventhandler
  external_deps += external_deps_bundle_framework
  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}

ohos_source_set("cj_bind_ffi") {
  configs = [ ":napi_config" ]
  all_dependent_configs = [ ":napi_config" ]
  public_configs = [ ":napi_config" ]
  sources = [ "mock_cj_bind_ffi.cpp" ]
  external_deps = [
    "c_utils:utils",
    "json:nlohmann_json_static",
  ]
  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}

ohos_source_set("cj_bind_native") {
  configs = [ ":napi_config" ]
  all_dependent_configs = [ ":napi_config" ]
  public_configs = [ ":napi_config" ]
  sources = [ "mock_cj_bind_native.cpp" ]
  external_deps = [
    "c_utils:utils",
    "json:nlohmann_json_static",
  ]
  part_name = "kv_store"
  subsystem_name = "distributeddatamgr"
}