# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")
import("//foundation/distributeddatamgr/kv_store/kv_store.gni")

group("build_module") {
  deps = []
  if(use_platform_win){
    deps += [
      "win:kvmock"
    ]
  }
  if (use_platform_mac) {
    deps += [
      "mac:kvmock"
    ]
  }
  if (is_ios) {
    deps += [
      "mac:kvmock_static"
    ]
  }
  if (is_android || is_linux) {
    deps += [
      "linux:kvmock"
    ]
  }
}